Fix game sidebar entries to avoid word-wrapping (side-scroll instead) Sidebar width is now based on child widths instead of being fixed, fixes issue with font scaling users

--- a/src/css/games.css
+++ b/src/css/games.css
@@ -72,7 +72,6 @@
     background-color: white;
     top: 0;
     left: 100%;
-    width: 276px; /* Accommodates longest MAX/MAX2/EXTREME/SN entry */
     height: 100%;
     /* For slim screens, leave some space for dismissal scrim, and add scrollbars */
     max-width: calc(100% - 44px);
@@ -107,6 +106,8 @@
 #game-settings label, #game-settings legend {
     display: block;
     padding-left: 16px;
+    padding-right: 16px;
+    white-space: nowrap;
 }
 
 #game-settings label {
